移动上传签名文件

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         config {
             keyAlias 'RealMadrid'
             keyPassword 'RealMadrid'
-            storeFile file('../../RealMadrid.keystore')
+            storeFile file('../RealMadrid.keystore')
             storePassword 'RealMadrid'
         }
     }
