--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ android {
             buildConfigField 'String', 'DEVELOP_VERSION', '"1"'
 
             manifestPlaceholders.put("BaiduMobAd_KEY", 'ea16cdf8d1')
-            buildConfigField 'String','Base_Api_Url','"http://192.168.10.133:8080/realmadrid/"'
+            buildConfigField 'String','Base_Api_Url','"http://192.168.0.104:8080/realmadrid/"'
             buildConfigField 'String','Time',"\"${releaseTime()}\""
 
             //渠道包重命名
@@ -65,7 +65,7 @@ android {
             buildConfigField 'String', 'DEVELOP_VERSION', '"1"'
 
             manifestPlaceholders.put("BaiduMobAd_KEY", 'ea16cdf8d1')
-            buildConfigField 'String','Base_Api_Url','"http://192.168.10.133:8080/realmadrid/"'
+            buildConfigField 'String','Base_Api_Url','"http://192.168.1.106:8080/realmadrid/"'
             buildConfigField 'String','Time',"\"${releaseTime()}\""
         }
     }
@@ -117,6 +117,8 @@ dependencies {
     compile files('libs/BaiduLBS_Android.jar')
     //极光推送2.1.3
     compile files('libs/jpush-android-2.1.3.jar')
+    //zxing二维码3.2.0
+    compile files('libs/core_3.2.0.jar')
     //ShareSDK 2.7.2
     compile fileTree(include: ['Mob*.jar'], dir: 'libs')
     compile fileTree(include: ['ShareSDK*.jar'], dir: 'libs')
